--- a/package.json
+++ b/package.json
@@ -3,21 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.3",
+    "change-case": "^4.1.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "ejs": "^3.1.8",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "nodemailer": "^6.8.0",
+    "numeral": "^2.0.6",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.40.0",
+    "react-icons": "^4.7.1",
     "react-phone-number-input": "^3.2.12",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "simplebar-react": "^2.4.3",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
