--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.10.5",
     "@faker-js/faker": "^7.6.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.3",
@@ -26,12 +28,15 @@
     "numeral": "^2.0.6",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^18.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-phone-number-input": "^3.2.12",
     "react-pro-sidebar": "^1.0.0-alpha.9",
+    "react-router": "^6.4.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^2.4.3",
